en/0.10.0/_sources/tutorials/pde/index.rst.txt
:orphan:

Solving PDEs
============

Here we show how the *discretize* package can be used to solve partial differential
equations (PDE) numerically by employing the finite volume method. To solve a PDE
numerically we must complete the following steps:

	1. Formulate the problem; e.g. the PDE and its boundary conditions
	2. Apply the weak formulation by taking the inner product of each PDE with a test function
	3. Formulate a discrete set of equations for the inner products according to the finite volume method
	4. Use the discrete set of equations to solve for the unknown variable numerically



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the discretize package to solve for the electric potential (\phi) and electric fiel...">

.. only:: html

  .. image:: /tutorials/pde/images/thumb/sphx_glr_1_poisson_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_pde_1_poisson.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Gauss' Law of Electrostatics</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the discretize package to model the advection-diffusion equation. The goal of this ...">

.. only:: html

  .. image:: /tutorials/pde/images/thumb/sphx_glr_2_advection_diffusion_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_pde_2_advection_diffusion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Advection-Diffusion Equation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Solve a nodal Poisson&#x27;s equation with Dirichlet boundary conditions ---------------------------...">

.. only:: html

  .. image:: /tutorials/pde/images/thumb/sphx_glr_3_nodal_dirichlet_poisson_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_pde_3_nodal_dirichlet_poisson.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Nodal Dirichlet Poisson solution</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/pde/1_poisson
   /tutorials/pde/2_advection_diffusion
   /tutorials/pde/3_nodal_dirichlet_poisson


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: pde_python.zip </tutorials/pde/pde_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: pde_jupyter.zip </tutorials/pde/pde_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
